update test certificates and keys